--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<h3 class="text-animation">I'm an aspiring <span></span></h3>
 			<p> As a detail-oriented developer with a passion for frontend development, design and human connections, I excel in 
 				understanding client requirements and translating them into user-friendly and visually appealing web applications.
-				With a strong foundation in HTML, CSS and UX design, .....................</p>
+				With a strong foundation in HTML, CSS, JavaScript, C# and UX design, I am a dedicated and driven professional committed to delivering exceptional results.</p>
 
 			<div class="social-icons">
 				<a href="https://www.linkedin.com/in/joshua-visser-497b18125"><i class='bxl  bx-linkedin'  ></i> </a>
@@ -57,11 +57,10 @@
 
 				<div class="timeline-item">
 					<div class="timeline-dot"></div>
-						<div class="timeline-date"> 2020
+						<div class="timeline-date"> 2024
 						</div>
-						<div class="timeline-content"><h3>High School</h3> <p>Lorem ipsum dolor sit amet consectetur 
-							adipisicing elit. Cumque accusantium voluptatum assumenda asperiores id sit itaque 
-							ratione dolore atque a.</p>
+						<div class="timeline-content"><h3>Company Startup</h3> <p>Successfully co-founded Legacy Remedial Tutors. A company that provides 
+							tutoring services to remedial students in need. I was responsible for evaluating, hiring and training new employees, ensuring the team was equipped to deliver high-quality services.</p>
 						</div>	
 				</div>
 
@@ -69,19 +68,19 @@
 					<div class="timeline-dot"></div>
 						<div class="timeline-date"> 2023
 						</div>
-						<div class="timeline-content"><h3>University</h3> <p>Lorem ipsum dolor sit amet consectetur 
-							adipisicing elit. Cumque accusantium voluptatum assumenda asperiores id sit itaque 
-							ratione dolore atque a.</p>
+						<div class="timeline-content"><h3>University</h3> <p>Began my undergraduate studies at Belgium Campus iTVersity to obtain my Bachelor of Computer Science degree.
+							Completed coursework in programming languages, algorithms, data structures, databases, and software development methodologies, frontend development, and UI/UX design.
+						</p>
 						</div>				
 				</div>
 
 				<div class="timeline-item">
 					<div class="timeline-dot"></div>
-						<div class="timeline-date"> 2024
+						<div class="timeline-date"> 2020
 						</div>
-						<div class="timeline-content"><h3>Startup</h3> <p>Lorem ipsum dolor sit amet consectetur 
-							adipisicing elit. Cumque accusantium voluptatum assumenda asperiores id sit itaque 
-							ratione dolore atque a.</p>
+						<div class="timeline-content"><h3>Highschool</h3> <p>Matriculated with a Bachelor pass with Mathematics, Physical Science, Biology and Drama. Achievements include 
+							being awarded for outstanding academic performance in Physical Science, Biology and Drama, as well as receiving the DUX award for overall highest average.
+						</p>
 						</div>					
 				</div>
 			</div>
@@ -94,28 +93,36 @@
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>UI / UX Design</h4>
-					<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, dolorum.</p>
+					<p> With a solid foundation in user research, wireframing and prototyping, I craft intuitive and visually appealing user interfaces that meet user 
+						requirements. My expertise in design tools like Figma and Adobe XD enables me to bring designs to life.
+					</p>
 				</div>
 			</div>
 
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>Client relations</h4>
-					<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, dolorum.</p>
+					<p> The ability to manage conflict, communicate effectively and work with others is my greatest strength. Understanding 
+						client requirements and frustrations enables me to translate them into mutually beneficial solutions.
+					</p>
 				</div>
 			</div>
 
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>Project Management</h4>
-					<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, dolorum.</p>
+					<p> With ample experience in employee and project management I find relating to, directing and teaching people is where I excel.
+						Having the ability to delegate and lead a team remains one of my strongest traits.
+					</p>
 				</div>
 			</div>
 
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>Frontend Development</h4>
-					<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, dolorum.</p>
+					<p> With a strong foundation in HTML, CSS and JavaScript, I excel in frontend development. I find my creativity and understanding 
+						of client desires to be what sets me apart from my competitors.
+					</p>
 				</div>
 			</div>
 		</div>
