--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>UI / UX Design</h4>
-					<p> With a solid foundation in user research, wireframing and prototyping, I craft intuitive and visually appealing user interfaces that meet user 
-						requirements. My expertise in design tools like Figma and Adobe XD enables me to bring designs to life.
+					<p> With a solid foundation in user research, wireframing, and prototyping, I craft intuitive and visually appealing 
+						user interfaces that align with user needs. My expertise in design tools such as Figma and Adobe XD allows me to bring designs to life.
 					</p>
 				</div>
 			</div>
@@ -102,8 +102,8 @@
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>Client relations</h4>
-					<p> The ability to manage conflict, communicate effectively and work with others is my greatest strength. Understanding 
-						client requirements and frustrations enables me to translate them into mutually beneficial solutions.
+					<p> My greatest strength is the ability to manage conflict, communicate effectively, and collaborate with others. 
+						Understanding client requirements and frustrations allows me to translate them into mutually beneficial solutions.
 					</p>
 				</div>
 			</div>
@@ -111,8 +111,8 @@
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>Project Management</h4>
-					<p> With ample experience in employee and project management I find relating to, directing and teaching people is where I excel.
-						Having the ability to delegate and lead a team remains one of my strongest traits.
+					<p> With experience in employee and project management, I excel at relating to, directing, and teaching people.
+						The ability to delegate and lead a team remains one of my strongest traits.
 					</p>
 				</div>
 			</div>
@@ -120,8 +120,8 @@
 			<div class="skills-box">
 				<div class="skills-info">
 					<h4>Frontend Development</h4>
-					<p> With a strong foundation in HTML, CSS and JavaScript, I excel in frontend development. I find my creativity and understanding 
-						of client desires to be what sets me apart from my competitors.
+					<p> With a strong foundation in HTML, CSS, and JavaScript, I excel in front-end development. 
+						I believe my creativity and understanding of client needs are what set me apart from the competition.
 					</p>
 				</div>
 			</div>
