--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			</div>
 
 			<div class="btn-group">
-				<a href="#" class="btn">Hire</a>
-				<a href="#Contact" class="btn">Contact</a>
+				<a href="#contact" class="btn">Hire</a>
+				<a href="#contact" class="btn">Contact</a>
 			</div>
 		</div>
 			<div class="home-img">
