--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="timeline-dot"></div>
 						<div class="timeline-date"> 2023
 						</div>
-						<div class="timeline-content"><h3>University</h3> <p>Began my undergraduate studies at Belgium Campus iTVersity to obtain my Bachelor of Computer Science degree.
+						<div class="timeline-content"><h3>University Belgium Campus</h3> <p>Began my undergraduate studies at Belgium Campus iTVersity to obtain my Bachelor of Computer Science degree.
 							Completed coursework in programming languages, algorithms, data structures, databases, and software development methodologies, frontend development, and UI/UX design.
 						</p>
 						</div>				
